--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
 
   <div id="content">
-    <h1>Hello.</h1>
+    <h1>Christoph Korner CSMA 101 Fall 2020.</h1>
     <p>This page is meant to document all your exercises and projects from the CSMA 101 course at <a href="https://woodbury.edu/">Woodbury University</a> in the fall of 2020.</p>
     <p>Make this page your own! Projects go into their respective subfolders. Feel free to add images (e.g. from sketches on paper), source data (for your data project) or any other materials as well.</p>
     <p>Many p5.js sketches won't load correctly when you open this website on your own computer, but they will load once you're accessing it over the internet (i.e. on github.io).</p>
