--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <div id="navigation">
     <p><a href="week1_1/index.html">Week 1: Brush</a></p>
-    <p>Week 1: Brush</p>
-    <p>Week 1: Brush</p>
+    <p><a href="week1_2/index.html">Week 1: Brush</a></p>
+    <p><a href="week1_3/index.html">Week 1: Brush</a></p>
     <p>Week 2: Variables / Filling the screen</p>
     <p>Week 2: Variables / Filling the screen</p>
     <p>Week 3: Conditionals</p>
