--- a/week1_1/index.html
+++ b/week1_1/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <script src="sketch.js"></script>
+
+    <p>move your mouse over the window to make more squares</p>
   
 
 </body></html>
