--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     <p><a href="week1_1/index.html">Week 1: Brush</a></p>
     <p><a href="week1_2/index.html">Week 1: Brush</a></p>
     <p><a href="week1_3/index.html">Week 1: Brush</a></p>
-    <p>Week 2: Variables / Filling the screen</p>
-    <p>Week 2: Variables / Filling the screen</p>
-    <p>Week 3: Conditionals</p>
-    <p>Week 3: Conditionals</p>
-    <p>Week 4: Rotation</p>
-    <p>Week 4: Rotation</p>
-    <p>Week 6: Image</p>
+    <p><a href="week2_1/index.html">Week 2: Variables / Filling the screen</a></p>
+    <p><a href="week2_2/index.html">Week 2: Variables / Filling the screen</a></p>
+    <p><a href="week3_1/index.html">Week 3: Conditionals</a></p>
+    <p><a href="week3_2/index.html">Week 3: Conditionals</a></p>
+    <p><a href="week4_1/index.html">Week 4: Rotation</a></p>
+    <p><a href="week4_2/index.html">Week 4: Rotation</a></p>
+    <p><a href="image1/index.html">Week 6: Image</a></p>
+    <p><a href="image2/index.html">Week 6: Image</a></p>
     <p><a href="week7/index.html">Week 7: Objects / Simulation</a></p>
-    <p>Mid-term</p>
-    <p>Week 9: State</p>
-    <p>Data Project</p>
+    <p><a href="midterm/index.html">Mid-term</a></p>
+    <p><a href="week9/index.html">Week 9: State</a></p>
+    <p><a href="data/index.html">Data Project</a></p>
   </div>
 
   <div id="content">
