move text below canvas test

--- a/week1_1/index.html
+++ b/week1_1/index.html
@@ -6,9 +6,10 @@
 
   </head>
   <body>
-    <script src="sketch.js"></script>
-
+    <div id="container"></div>
+    
     <p>move your mouse over the window to make more squares</p>
-  
+
+    <script src="sketch.js"></script>
 
 </body></html>
