--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
   <div id="navigation">
+  	<p><a href="https://leffav.github.io/csma101-fall20/">Home</a></p>
     <p><a href="week1_1/index.html">Week 1: Brush</a></p>
     <p><a href="week1_2/index.html">Week 1: Brush</a></p>
     <p><a href="week1_3/index.html">Week 1: Brush</a></p>
