--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
 
   <div id="content">
     <h1>Christoph Korner CSMA 101 Fall 2020.</h1>
-    <p>This page is meant to document all your exercises and projects from the CSMA 101 course at <a href="https://woodbury.edu/">Woodbury University</a> in the fall of 2020.</p>
-    <p>Make this page your own! Projects go into their respective subfolders. Feel free to add images (e.g. from sketches on paper), source data (for your data project) or any other materials as well.</p>
-    <p>Many p5.js sketches won't load correctly when you open this website on your own computer, but they will load once you're accessing it over the internet (i.e. on github.io).</p>
+    <p>This page is meant to document all your exercises and projects from the CSMA 101 course at <a href="https://woodbury.edu/"target="_blank">Woodbury University</a> in the fall of 2020.</p>
+    <p>Thank you to our instructor Gottfried Haider for the wealth of knowledge he offered to us and his patience. </p>
+    <p>Software and applications used:</p>
+    <p>- <a href="https://p5js.org/"target="_blank">p5.js</a></p>
+    <p>- <a href="https://www.sublimetext.com/"target="_blank">Sublime Text</a></p>
+    <p>- <a href="https://github.com/"target="_blank">GitHub</a></p>
   </div>
 
   <!-- those are JavaScripts that are loaded and executed by the browser -->
