--- a/data/index.html
+++ b/data/index.html
@@ -6,6 +6,10 @@
 
   </head>
   <body>
+  	<div id="container"></div>
+    
+    <p>a week of digital communication</p>
+
     <script src="sketch.js"></script>
   
 
