--- a/image1/index.html
+++ b/image1/index.html
@@ -6,6 +6,10 @@
 
   </head>
   <body>
+  	<div id="container"></div>
+    
+    <p>Who designed LC2? Charlotte Perriand</p>
+
     <script src="sketch.js"></script>
   
 
