--- a/image2/index.html
+++ b/image2/index.html
@@ -6,6 +6,11 @@
 
   </head>
   <body>
+  	<div id="container"></div>
+    
+    <p>scratch away Le Corbusier to reveal the real designer of the LC furniture, Charlotte Perriand</p>
+
+  	
     <script src="sketch.js"></script>
   
 
