--- a/midterm/index.html
+++ b/midterm/index.html
@@ -6,6 +6,10 @@
 
   </head>
   <body>
+  	<div id="container"></div>
+    
+    <p>make it rain by clicking on the canvas</p>
+
     <script src="sketch.js"></script>
   
 
