--- a/week1_2/index.html
+++ b/week1_2/index.html
@@ -6,6 +6,9 @@
 
   </head>
   <body>
+  	<div id="container"></div>
+    
+    <p>move your mouse over the window to stretch triangles</p>
     <script src="sketch.js"></script>
   
 
