--- a/week1_3/index.html
+++ b/week1_3/index.html
@@ -6,6 +6,9 @@
 
   </head>
   <body>
+  	 <div id="container"></div>
+    
+    <p>create a yellow dot road</p>
     <script src="sketch.js"></script>
   
 
