--- a/week3_1/index.html
+++ b/week3_1/index.html
@@ -6,6 +6,10 @@
 
   </head>
   <body>
+  	<div id="container"></div>
+    
+    <p>click to make more squares</p>
+
     <script src="sketch.js"></script>
   
 
