--- a/week3_2/index.html
+++ b/week3_2/index.html
@@ -6,6 +6,10 @@
 
   </head>
   <body>
+  	<div id="container"></div>
+    
+    <p>click to make some circles</p>
+
     <script src="sketch.js"></script>
   
 
