--- a/week9/index.html
+++ b/week9/index.html
@@ -6,6 +6,10 @@
 
   </head>
   <body>
+  	<div id="container"></div>
+    
+    <p>enjoy the elevator ride (unfinished business)</p>
+
     <script src="sketch.js"></script>
   
 
