--- a/week2_2/index.html
+++ b/week2_2/index.html
@@ -6,6 +6,10 @@
 
   </head>
   <body>
+  	<div id="container"></div>
+    
+    <p>inspired by Josef Albers</p>
+
     <script src="sketch.js"></script>
   
 
