Add some more #container divs to HTML

--- a/week7/index.html
+++ b/week7/index.html
@@ -6,6 +6,8 @@
 
   </head>
   <body>
+    <div id="container"></div>
+
     <script src="sketch.js"></script>
     <script src="amanda.js"></script>
     <script src="christoph.js"></script>
